--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /*  your css code here. If applicable */
-#nav-bar{
+#container{
     background-color: #D3D3D3;
     padding: 10px;
 }
@@ -7,11 +7,12 @@
 #list{
     display: inline;
     margin-right: 1rem;
-    list-style:none
+    list-style:none;
+    display: flex; 
 }
-
 #list>li{
     display: inline;
     margin-right: 1rem;
-    list-style:none
+    list-style:none;
+    display: flex; 
 }
