--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,11 @@
-/*  your css code here. If applicable */
 #container{
     background-color: #D3D3D3;
+    display: flex; 
+    padding: 10px;
 }
 
-#list{
+li{
     display: inline;
     margin-right: 1rem;
     list-style:none;
-    display: flex; 
-	padding: 10px;
-    background-color: #D3D3D3;
-}
-#list>li{
-    display: inline;
-    margin-right: 1rem;
-    list-style:none;
-    display: flex; 
-	padding: 10px;
-    background-color: #D3D3D3;
 }
